--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,108 +1,81 @@
-@media (max-device-width:640px) {
+@media (max-width:640px) {
   body {
     padding: 0px;
   }
 
+  h1 {
+    font-size: 1.2rem;
+  }
+
+  h2 {
+    font-size: 1.15rem;
+  }
+
+  h3 {
+    font-size: 1.029rem;
+  }
+
+  h4 {
+    font-size: 0.84rem;
+  }
+
   .nav-links ul li {
     padding: 0;
-    padding-left: 13px;
   }
 
   .main-nav .container {
-    height: 57px;
+    height: 5vh;
   }
+
   .categoryProduct {
     display: none;
   }
 
   header {
-    width: 100%;
-    height: 175px;
-    padding: 0px;
-    margin-top: 60px;
-    margin-left: 0px;
-  }
-
-  .headerContain h1 {
-    font-size: 19px;
-    left: 13px;
-    top: 0px;
+    margin-top: 12%;
+    height: 23vh;
   }
 
   .headerContain img {
-    height: 183px;
+    height: 100%;
   }
 
   .headerContain #ctaHeader {
-    width: 203px;
-    height: 36px;
-    top: 90px;
     font-size: 15px;
-    left: 7px;
   }
-  #burger-menu{
+
+  #burger-menu {
     display: flex;
-    padding-left: 13px;
-    padding-right: 5px;
+    padding: 0% 3%;
   }
-  .resumeWebSite {
-    font-size: 14px;
-    width: 100%;
-    height: 74px;
-    margin: 0px;
+
+  .resumeWebSite h2 {
+    margin: 6% 2%;
   }
 
   .categoryProduct {
     display: none;
   }
-
-  .menuBurger {
-    display: flex;
-    position: absolute;
-    left: 15px;
-    top: 15px;
-  }
-
-  .product-row {
+  .icons-row,.footer-container,.product-row{
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  }
+  .product-row {
+    margin: 0;
   }
 
   .product {
+    margin: 2% 0%;
     width: 100%;
-    height: 159px;
-    margin-top:10px;
-
   }
 
-  .product img {
-    padding: 23px 0px 0px 19px;
-    height: 117.79px;
+  .product .product-img img {
+    height: 12vh;
   }
 
-  .textProduct {
-    font-size: 15px;
-    height: 40px;
-    width: 128px;
-  }
-  .favoriteMacaron{
-    top: 10px;
-    left: 113px;
-  }
   .ctaProduct {
-    width: 156px;
-    height: 30px;
-    font-size: 16px;
-    right: 10px;
-  }
-
-  .add {
-    height: 181px;
-  }
-
-  .addStrong {
-    font-size: 25px;
+    margin: 2.5%;
+    padding: 3%;
+    font-size: 15px;
   }
 
   .addSpan {
@@ -110,32 +83,26 @@
   }
 
   .add #ctaADD {
-    width: 129px;
-    height: 22px;
     font-size: 11px;
-    line-height: 13px;
   }
 
-  .icon img {
-    height: 85px;
+  .icons-row {
+    justify-content: space-between;
+    align-items: center;
   }
 
-  .icon p {
-    font-size: 10px;
+  .icon h4 {
     text-align: center;
   }
 
   footer {
+    padding: 0% 2%;
     height: auto;
   }
 
-  .footer-container {
-    flex-direction: column;
+  .about,.form,.referencing{
+    width: 100%;
+    height: 30%;
   }
-  .footer-container p {
-    padding-left: 35px;
-  }
-  .go-top {
-    font-size: 75px;
-  }
+
 }
